# prevention-coach-rag

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: ci.yml  deploy-web.yml
apps/web/: .env.example  README.md  next.config.ts  package.json
apps/web/public/: AXA-Prevention-Coach-support.pptx
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/audio-status/[id]/: route.ts
apps/web/src/app/api/chat/: route.ts
apps/web/src/app/api/generate-audio/: route.ts
apps/web/src/app/api/tts/: route.ts
apps/web/src/app/coach_bot/: route.ts
apps/web/src/app/guide/[domain]/: page.tsx
apps/web/src/components/: CoachExperience.tsx  GuideViewer.tsx
apps/web/src/lib/coach/: agents.ts  corpus.ts  langgraph.ts  tts.ts  types.ts
docs/: accessibility.md  architecture.md  deployment.md  design-system.md  observability.md  roadmap.md  security.md
docs/adr/: 0001-langgraph-agent.md  0002-bff-nextjs.md  0003-eu-observability.md  0004-mistral-tts.md  0005-pnpm-turborepo.md  0006-langgraph-cloud-auth.md
docs/diagrams/: architecture.mmd
docs/legacy/web-mvp/: README.md  provider.ts  retrieval.ts  risk.ts
services/agent/: .env.example  README.md  langgraph.json  pyproject.toml
services/agent/agent/: __init__.py  auth.py  constants.py  graph.py  ingestion.py  mistral_doc_library.py
services/agent/corpus/: axa_prevention.jsonl
services/agent/scripts/: mistral_library_admin.py  seed_store.py
services/agent/tests/: test_graph.py  test_ingestion.py  test_mistral_doc_library.py
(+2 files in other folders)
